syntax = "proto3";
package ibc.lightclients.wasm.v1;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";

option go_package = "github.com/cosmos/ibc-go/modules/light-clients/08-wasm/types";

// Query service for wasm module
service Query {
  // Get all Wasm code hashes
  rpc CodeHashes(QueryCodeHashesRequest) returns (QueryCodeHashesResponse) {
    option (google.api.http).get = "/ibc/lightclients/wasm/v1/code_hashes";
  }

  // Get Wasm code for given code hash
  rpc Code(QueryCodeRequest) returns (QueryCodeResponse) {
    option (google.api.http).get = "/ibc/lightclients/wasm/v1/code_hashes/{code_hash}/code";
  }
}

// QueryCodeHashesRequest is the request type for the Query/CodeHashes RPC method.
message QueryCodeHashesRequest {
}

// QueryCodeHashesResponse is the response type for the Query/CodeHashes RPC method.
message QueryCodeHashesResponse {
  repeated string code_hashes = 1;
}

// QueryCodeRequest is the request type for the Query/Code RPC method.
message QueryCodeRequest {
  string code_hash = 1;
}

// QueryCodeResponse is the response type for the Query/Code RPC method.
message QueryCodeResponse {
  bytes data = 1;
}